--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
       }
 
-      /* Lanscape phones and down */
+      /* Landscape phones and down */
       @media (max-width: 480px) {
        .copy {
         padding: 2.5% 10%;
@@ -121,7 +121,13 @@
 		</div>
 	</div>
 	
+	<!-- We use row-fluid inside containers to achieve a resizable layout. -->
+	<!-- blogs.endjin.com/2013/04/tips-for-implementing-responive-designs-using-bootstrap/-->
+	<!-- http://stackoverflow.com/a/12270322 -->
 	<div class="container">
+		<!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
+		<!-- www.google.com/fonts/specimen/Ubuntu -->
+		<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 		<div class="row-fluid heading">
 			<div class="span12">
 				<h1>Product</h1>
@@ -129,6 +135,8 @@
 		</div>
 		<div class="row-fluid subheading">
 			<div class="span12">
+				<!-- Special typography from Bootstrap for lead paragraph. -->
+				<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
 				<p class="lead">One sentence description.</p>
 			</div>
 		</div>
@@ -136,10 +144,12 @@
 			<div class="span5 offset1 video">
 				<img class="img-polariod" src="http://placehold.it/480x300">	
 			</div>
+			<!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
 			<div class="span5 actions">
 				<div class="span8 offset2">
 					<div class="statistics">
 						<div class="span4">
+						<!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries. -->
 							<div class="linediv-l">
 								<h3>100</h3><p>backers</p>
 							</div>
@@ -158,21 +168,31 @@
 					</div>
 				</div>
 				<div class="span10 offset1">
+					<!-- Bootstrap progress bar -->
+					<!-- http://twitter.github.io/bootstrap/components/html#progress -->
 					<div class="thermometer progress active">
 					<div class="bar bar-success" style="width: 60%;"></div>
 					<div class="bar bar-warning" style="width: 40%"></div>
 					</div>
 				</div>
 				<div class="span6 offset3 order">
+					<!-- Standard Bootstrap button. -->
+					<!-- http://twitter.github.io/bootstrap/base-css.html#buttons. -->
 					<button class="btn btn-success btn-large">Preorder</button>
 				</div>
 				<div class="span8 offset2 social">
+					<!-- Social buttons are not included in default Bootstrap. -->
+					<!-- See: http://noizwaves.github.io/bootstrap-social-button. -->
 					<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 					<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 				</div>
 			</div>
 		</div>
 		
+		<!-- Beyond this part the marketing copy begins. -->
+		<!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+		<!-- http://twitter/github/io/bootstrap/base-css.html#images -->
+		<!-- http://placehold.it -->
 		<div class="row-fluid section1">
 			<div class="span5 offset1 asset">
 				<img class="img-polariod" src="http://placehold.it/480x300">
@@ -203,7 +223,10 @@
 				<img class="img-polariod" src="http://placehold.it/480x300">
 			</div>
 		</div>
-		
+
+		<!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
+		<!-- This brings in jquery.js and bootstrap.js as dependencies. -->
+		<!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
 		<div class="row-fluid faq">
 			<div class="span10 offset1">
 			<h3>FAQ</h3>
@@ -235,6 +258,8 @@ What's a Frequently Asked Question?
 			</div>
 		</div>
 
+		<!-- Not crucial, but we put thsi under a CC By-SA 3.0 license. -->
+		<!-- http://creativecommons/org/license/ -->
 		<div class="row-fluid footer">
 			<div class="span12">
 				<p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0">CC By-SA 3.0</a>, without all the cruft that would otherwisebe put ate bottom of the page.</p>
