updating the social buttons position

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 	}
 
 	/* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */
-	div.addthis_toolbar {
-	 width: 180px;
+	div.addthis_toolbox {
+	 width: 250px;
 	 margin: 0 auto;
 	}
 	</style>
